--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-Hello world!
+    <h1>Restaurants in Nieuwegein - 0.1</h1>
+    <aside>
+        <div>
+            <ul data-bind="foreach: locationList">
+                <li data-bind="click: $parent.selectedFromList">
+                    <div data-bind="text: name"></div>
+                </li>
+            </ul>
+        </div>
+    </aside>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
+    <script src="js/restaurants.js"></script>
 </body>
 </html>
