--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Restaurants in Nieuwegein - 0.2</h1>
+    <section id="googleMap">
+        
+    </section>
     <aside>
         <div class="form-group">
             <input class="form-control" type="text" placeholder="Search for restaurant" data-bind="textinput: query, event: {keyup:search}">
@@ -23,6 +26,7 @@
     </aside>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=MYKEY"></script>
     <script src="js/restaurants.js"></script>
 </body>
 </html>
