--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input class="form-control" type="text" placeholder="Search for restaurant" data-bind="textinput: query, event: {keyup:search}">
         </div>
         <div>
-            <ul class="list-group" data-bind="foreach: locationList">
+            <ul class="list-group" data-bind="foreach: restaurantList">
                 <li class="list-group-item" data-bind="click: $parent.selectedFromList">
                     <div class="name" data-bind="text: name"></div>
                 </li>
