added footer with attribution

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             </div>
         </aside>
     </div>
+    <footer class="col-md-12 text-center">
+        <p>
+            This application uses Foursquare data to retrieve information about the restaurants. The Google maps api was  used to show the map with the markers. 
+        </p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC14-uYo_rihUbjvwciAmeKuxeDO6au05A"></script>
