--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC14-uYo_rihUbjvwciAmeKuxeDO6au05A"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC14-uYo_rihUbjvwciAmeKuxeDO6au05A&callback=init" 
+            async defer onerror="mapError()"></script>
     <script src="js/restaurants.js"></script>
 </body>
 </html>
