--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
     <script src="js/data.js"></script>
     <script src="js/restaurants.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC14-uYo_rihUbjvwciAmeKuxeDO6au05A&callback=init" 
+    <script src="https://maps.googleapis.com/maps/api/js?key=<YOURKEY>&callback=init" 
             async defer onerror="mapError()"></script>
 </body>
 </html>
